# ai-proxy

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  a  task-insert.sh  tasks.csv
aiproxy-bin/: Cargo.toml
aiproxy-bin/src/: main.rs
aiproxy-core/: Cargo.toml
aiproxy-core/docs/: error.md  next-streaming.md  normalization.md  stream.md  telemetry.md
aiproxy-core/src/: config.rs  error.rs  http_client.rs  lib.rs  model.rs  normalizer.rs  provider.rs  provider_factory.rs  router.rs  stream.rs  test_util.rs
aiproxy-core/src/providers/anthropic/: mod.rs
aiproxy-core/src/providers/openai/: mod.rs
aiproxy-core/src/providers/openrouter/: mod.rs
aiproxy-core/src/telemetry/: keys.rs  mod.rs  test_span.rs  types.rs
docs/: config.md
