[package]
name = "aiproxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
toml = "0.8"
tempfile = { version = "3", optional = true }
thiserror = "1"
unicode-normalization = "0.1"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "test-util"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
http = "1"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"     # or wiremock = "0.6"